<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:theme="@style/AppTheme.ScrollEdge">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hai"
            android:textAppearance="@style/TextAppearance.Title1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/there_are_some_batik_from_batikita"
            android:textAppearance="@style/TextAppearance.Title4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/popular"
            android:textAppearance="@style/TextAppearance.Title2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/homeAct_progressBarViewPager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/colorEndBg" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/homeAct_viewPager2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.ScrollEdge" />

            <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                android:id="@+id/homeAct_dotsIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/homeAct_viewPager2"
                android:layout_centerInParent="true"
                app:dotsColor="@color/colorEndBg"
                app:dotsSize="10dp"
                app:dotsStrokeColor="@color/colorText" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/all"
                android:textAppearance="@style/TextAppearance.Title2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/homeAct_btnSeeAll"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/see_all"
                android:textAppearance="@style/TextAppearance.Body2"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/homeAct_progressBarRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/colorEndBg" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/homeAct_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_batik" />
        </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>